--- a/treino.css
+++ b/treino.css
@@ -2,18 +2,26 @@ body {
   background-color: rgb(238, 157, 238);
 }
 .conteiner{
-  margin:-15px 0 0 300px;
+  
+  margin:-15px 0 0 130px;
 }
 .lembrando {
     background-color: rgb(190, 190, 190);
     text-align: center;
-    margin: 8em;
+    margin:7em;
     border-color: rgb(0, 0, 0);
     border: 5px double rgb(240, 22, 22);
-    width: 300px;
-    height: 300px;
+    
+    width: 800px;
+    height: 350px;
     padding: 30px;
+    letter-spacing: 2px;
+    line-height: 30px;
 }
 .tentando {
   color: rgb(0, 0, 0);
+  
+}
+.arrumando {
+    margin-right: 700px;
 }
