--- a/treino.css
+++ b/treino.css
@@ -5,23 +5,37 @@ body {
   
   margin:-15px 0 0 130px;
 }
-.lembrando {
-    background-color: rgb(190, 190, 190);
+.Lembrando {
+    background-color: rgb(196, 193, 193);
     text-align: center;
     margin:7em;
     border-color: rgb(0, 0, 0);
-    border: 5px double rgb(240, 22, 22);
-    
+    border: 5px double rgb(209, 19, 226) ;
+    border-radius: 5px;
     width: 800px;
     height: 350px;
     padding: 30px;
     letter-spacing: 2px;
     line-height: 30px;
+    
 }
-.tentando {
+.Tentando {
   color: rgb(0, 0, 0);
   
 }
-.arrumando {
+.Arrumando {
     margin-right: 700px;
+}
+.Ajeitando {
+  margin-right: 400px;
+  margin-top: -147px;
+  margin-left: 50px;
+}
+.Organizando {
+  margin-top: -147px;
+  margin-left: 100px;
+}
+.Dandosequência {
+   margin-left: 600px;
+   margin-top: -147PX;
 }
